[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["smogili-xpanse <sid.mogili@xpanse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
langchain-mistralai = "^0.2.1"
langchain = "^0.3.7"
langgraph = "^0.2.46"
ipython = "^8.29.0"
flask = "^3.1.0"
ruff = "^0.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
